# facedetector

./: README.md
Detector/: CMakeLists.txt  Detector.cpp  Detector.sln  stdafx.h
Detector/Detector/: CMakeLists.txt  Detector  Detector.cpp  Detector.sln  Detector.vcxproj  Detector.vcxproj.filters  GenericDetector.h  ReadMe.txt  stdafx.cpp  targetver.h
Detector/Detector/x64/Debug/: vc140.idb
Detector/Detector/x64/Debug/Detector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Detector.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FaceDetectorLib/: CMakeLists.txt  FaceDetector.h  FaceDetectorLib.sln  ImagePreparation.cpp  ImageProcessing.cpp  dllmain.cpp  stdafx.cpp  stdafx.h
FaceDetectorLib/FaceDetectorLib/: CMakeLists.txt  FaceDetector.h  FaceDetectorLib.vcxproj  FaceDetectorLib.vcxproj.filters  GenericDetector.h  ImagePreparation.cpp  ImageProcessing.cpp  dllmain.cpp  stdafx.cpp  stdafx.h
LaunchTheProgram/ubuntu/: detector.tar
LaunchTheProgram/ubuntu/pics/: 060117_LH_face-neuron_main.json  060117_LH_face-neuron_main__0.json  060117_LH_face-neuron_main__1.json  060117_LH_face-neuron_main__2.json  060117_LH_face-neuron_main__3.json  060117_LH_face-neuron_main__4.json  060117_LH_face-neuron_main__5.json  060117_LH_face-neuron_main__6.json  060117_LH_face-neuron_main__7.json  happy-people.json  happy-people__0.json  happy-people__1.json  journal.pone.0161114.g001.json  journal.pone.0161114.g001__0.json  journal.pone.0161114.g001__1.json  landscape-ustv-friends-cast-shot.json  landscape-ustv-friends-cast-shot__1.json  landscape-ustv-friends-cast-shot__2.json  landscape-ustv-friends-cast-shot__3.json  landscape-ustv-friends-cast-shot__4.json  landscape-ustv-friends-cast-shot__5.json  result.json  sc-fam-changing-beauty-people-1128.json  sc-fam-changing-beauty-people-1128__0.json  sc-fam-changing-beauty-people-1128__1.json  sc-fam-changing-beauty-people-1128__2.json  top-100-most-influential-blockchain-people-power-list-leaderboard.json  top-100-most-influential-blockchain-people-power-list-leaderboard__0.json  top-100-most-influential-blockchain-people-power-list-leaderboard__0__0.json  top-100-most-influential-blockchain-people-power-list-leaderboard__1.json  top-100-most-influential-blockchain-people-power-list-leaderboard__1__0.json  top-100-most-influential-blockchain-people-power-list-leaderboard__2.json  top-100-most-influential-blockchain-people-power-list-leaderboard__2__0.json  top-100-most-influential-blockchain-people-power-list-leaderboard__3.json  top-100-most-influential-blockchain-people-power-list-leaderboard__4.json  top-100-most-influential-blockchain-people-power-list-leaderboard__5.json  top-100-most-influential-blockchain-people-power-list-leaderboard__6.json
LaunchTheProgram/x64/pics/: 060117_LH_face-neuron_main.json  060117_LH_face-neuron_main__0.json  060117_LH_face-neuron_main__1.json  060117_LH_face-neuron_main__2.json  060117_LH_face-neuron_main__3.json  060117_LH_face-neuron_main__4.json  060117_LH_face-neuron_main__5.json  060117_LH_face-neuron_main__7.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__0.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__1.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__2.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__5.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__6.json  journal.pone.0161114.g001.json  landscape-ustv-friends-cast-shot.json  top-100-most-influential-blockchain-people-power-list-leaderboard.json
LaunchTheProgram/x86/pics/: 060117_LH_face-neuron_main__6.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__3.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__4.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__7.json  Fig-8-Sample-images-from-the-Forensic-Sketch-database-Images-are-obtained-from-various__8.json  happy-people.json  happy-people__0.json  happy-people__1.json  result.json  sc-fam-changing-beauty-people-1128.json
